hero page done. fixed nav bar to be cropped

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -42,3 +42,18 @@ button {
     transform: translateX(100%);
   }
 }
+
+.container-custom {
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+
+@media (max-width: 768px) {
+  .container-custom {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
